# simplevideo-rs

./: Cargo.toml  LICENSE  README.md
src/: formats.rs  lib.rs
test-data/: test.webm
