[package]
name = "simple_video"
version = "0.1.0"
authors = ["Hackpoetic <chao-mu@hackpoetic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
strict = []

[dependencies]
gstreamer = "*"
gstreamer-app = "*"
gstreamer-video = "*"
failure = "*"
failure_derive = "*"
